k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: milton-estates-game
  namespace: games
  labels:
    app.kubernetes.io/name: milton-estates-game
spec:
  selector:
    app.kubernetes.io/name: milton-estates-game
  ports:
    - name: http
      port: 80
      targetPort: http
